css/style.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700,300);
@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,300,600,700);
@import url('https://fonts.googleapis.com/css?family=Montserrat');
@import url('https://fonts.googleapis.com/css?family=Roboto:100, 300');

body{
  font-family: "Source Sans Pro", Helvetica, sans-serif;
  background-color: #E2E0EF;
}

a:visited,
a:link{
  text-decoration: none;
}


a:hover,
a:active {
  text-decoration: none;
  color: inherit;
}

h1 {
  font-size: 30px;
  color: #473a87;
  font-family: 'Montserrat', sans-serif;
  text-transform: uppercase;
  margin-bottom: 40px;
}

.breakline {
  height: 5px;
  color: #FF88BD;
  background-color: #FF88BD;
  align: center;
  width: 200px;
  margin-bottom: 30px;
}

.breakline--sm {
  width: 50px;
}

.breakline--md {
  width: 100px;
}

.paragraph {
  text-align: justify;
  padding: 0px 15px;
}


.uppercase {
  text-transform: uppercase;
}

.text-cyan {
  color: #00BCD4;
}

.text-teal {
  color: #4FB8B4;
}

.text-pink {
  color: #ec407a;
}

.text-indigo {
  color: #4670B3;
}

.text-blue {
  /* color: #5FA1FF; */
  color: #348CFF;
}

.bg-teal {
  background-color: #4FB8B4;
  color: #fafafa;
}

.text-center {
  text-align: center;
}

.vertical-center {
  display: inline-block;
  vertical-align: middle;
  float: none;
}

.hero{
  color: #fff;
  text-align: center;
  background: #494da1;
  background: -moz-linear-gradient(top, #3F51B5 0%, #5846b0 70%);
  background: -webkit-linear-gradient(top, #3F51B5 0%, #5846b0 70%);
  background: linear-gradient(to bottom, #3F51B5 0%, #5846b0 70%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3F51B5', endColorstr='#5846b0',GradientType=0 );
}

.hero__headline-div{
  margin-top: 60px;
}

.hero__title {
  font-size: 42px;
  color: white;
  font-family: 'Montserrat', sans-serif;
  text-transform: uppercase;
  letter-spacing: 2px;
}

.hero__subtitle {
  margin: 0px;
  font-size: 18px;
  /*
  font-family: 'Roboto', sans-serif;
  font-weight: 400;
  */
  color: #999EDE;
}

.bands-svg {
  height: 225px;
  width: 100%;
  display: block;
}

.bands-svg__background {
  display:  inline;
  fill: #5846B0;
  fill-opacity: 1;
  stroke: none;
}

.bands-svg__band {
  opacity:0.1;
  fill: #ffffff;
  fill-opacity: 1;
  stroke: none;
}

.topnav {
  font-family: 'Montserrat', sans-serif;
  /* background-color: rgba(250, 250, 250, 0.1); */
  width: 100%;
}

.topnav__links {
  float: right;
  list-style: none;
  margin: 0;
  padding-left: 0px;
}

.topnav__links > li {
  float: left;
  display: block;
  padding: 40px 20px;
}

.topnav__link {
  color: #fff; /* #999EDE; */
}

.topnav__link:hover {
  color: #6CC9FA;
  /* color: #FF88BD; */
}

.topnav__link > .active {
  color: #21FFC8;
}

.topnav__button {
  font-family: 'Montserrat', sans-serif;
  letter-spacing: 2px;
  color: #fff;
  border-radius: 50px;
  border-width: 0px;
  padding: 10px 20px;
  background-color: #6CC9FA;
  box-shadow: 0 2px 2px 0 #6CC9FA,
              0 3px 1px -2px #6CC9FA,
              0 1px 5px 0 #6CC9FA;
  /*
  background-color: #FF88BD;
  box-shadow: 0 2px 2px 0 #FF88BD,
              0 3px 1px -2px #FF88BD,
              0 1px 5px 0 #FF88BD;
  */
}

.topnav__button:hover {
  color: #fff;
  background-color: #83D2FC;
  box-shadow: 0 2px 2px 0 #83D2FC,
              0 3px 1px -2px #83D2FC,
              0 1px 5px 0 #83D2FC;
  /*
  background-color: #ff93c3;
  box-shadow: 0 2px 2px 0 #ff93c3,
              0 3px 1px -2px #ff93c3,
              0 1px 5px 0 #ff93c3;
  */
}

.atom {
  position: relative;
  margin-top: 15px;
  height: 325px;
  width: 325px;
  /*background-image: url(file://C:/Users/Eric/Documents/GitHub/ericgossett.github.io/assets/img/atom.svg);*/
  background-image: url(../assets/img/atom.svg);
  background-position: 50% 0;
  background-size: auto, auto 100%;
  background-repeat-y: no-repeat;
}

.header-profile-image {
  width: 150px;
  position: absolute;
  bottom: 91px;
  left: 0;
  right: 0;
  margin: auto;
  border-radius: 50%;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);

}

.content-container{
  margin-top: -100px;
  font-size: 1.3em;
  line-height: 1.4;
  /*color: #77758D;*/
  color: #1E183A;
  background-color: rgb(250, 250, 255);
  /*
  box-shadow: 0 4px 5px 0 rgba(0,0,0,.14),
              0 1px 10px 0 rgba(0,0,0,.12),
              0 2px 4px -1px rgba(0,0,0,.2);
  border-radius: 2px;
  */
  padding: 180px 30px;
  margin-bottom: -80px;
}

.row-padding {
  padding-bottom: 30px
}


.footer {
  margin-top: -7px;
  display: block;
  height: 220px;
  line-height: 220px;
  color: #fff;
  text-align: center;
  font-family: 'Roboto', sans-serif;
  letter-spacing: 1px;

  background: #494da1;
  background: -moz-linear-gradient(top, #5846b0 30%, #3F51B5 100%);
  background: -webkit-linear-gradient(top, #5846b0 30%, #3F51B5 100%);
  background: linear-gradient(to bottom, #5846b0 30%, #3F51B5 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5846b0', endColorstr='#3F51B5',GradientType=0 );

}


.btn-main {
  font-family: 'Montserrat', sans-serif;
  font-size: 16px;
  letter-spacing: 2px;
  color: #fff;
  background-color:  #4b61d8; /* #348CFF; */
  border-radius: 50px;
  border-width: 0px;
  padding: 15px 30px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),
              0 3px 1px -2px rgba(0,0,0,.2),
              0 1px 5px 0 rgba(0,0,0,.12);
  /*transition: all 0.3s cubic-bezier(.25,.8,.25,1);*/
}

.btn-main:hover {
  color: #FFF;
  background-color: #4c63e0; /*#4499FF; */
  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .14),
              0 1px 18px 0 rgba(0, 0, 0, .2),
              0 3px 5px -1px rgba(0, 0, 0, .12);
  transform: translate3d(0, -4px, 0);
  -webkit-transition: -webkit-transform 0.3s ease;
  transition: -webkit-transform 0.3s ease;
  transition: transform 0.3s ease;
  transition: transform 0.3s ease, -webkit-transform 0.3s ease;

  /*
  background-color: #7267CF;
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
  */
  /*
  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),
              0 3px 1px -2px rgba(0,0,0,.2),
              0 1px 5px 0 rgba(0,0,0,.12);
  */
}



.card {
  border: 1px solid hsla(0,0%,45%,.15);
  border-radius: 3px;
	margin:5px;
	background-color:#fff;
	margin-bottom:28px;
	font-size:14px;
	box-shadow:0 2px 3px 0 hsla(0,0%,45%,.15);
}

.card:hover {
  /* cursor: pointer; */
	box-shadow:0 6px 10px 2px hsla(0,0%,45%,.2);
	-webkit-transform:translate3d(0,-4px,0);
	transform:translate3d(0,-4px,0);
	-webkit-transition:-webkit-transform .3s ease;
	transition:-webkit-transform .3s ease;
	transition:transform .3s ease;
	transition:transform .3s ease,-webkit-transform .3s ease;
}


.card_skill {
  border: 1px solid hsla(0,0%,45%,.15);
  border-radius: 3px;
	box-shadow: 0 2px 3px 0 hsla(0,0%,45%,.15);
  transition: box-shadow .5s;
  /*
  border-radius: 4px;
  margin: 5px;
  */
  padding: 10px 0;
  text-align: center;
  background-color: #FFF;
  margin-bottom: 28px;
  font-size: 16px;
  height: 180px;
}

.card_skill > i {
  font-size: 40px;
  color: #5754AA;
}



.flask_icon_circle {
  fill: #5754AA;
}

.flask_icon_path {
  fill: #fff;
}

.flux_icon {
  fill: #5754AA;
}

.threejs_icon {
  fill: #5754AA;
}

.express_icon {
  font-size: 30px !important;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  color: #5754AA;
}

/*
.card_skill:hover {
  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .14),
              0 1px 18px 0 rgba(0, 0, 0, .2),
              0 3px 5px -1px rgba(0, 0, 0, .12);
  background-color:  #5754AA;
  color: #fff;
}
.card_skill:hover > i {
  color: #fff;
}
.card_skill:hover .flask_icon_circle {
  fill: #fff;
}
.card_skill:hover .flask_icon_path {
  fill: #5754AA;
}
.card_skill:hover .express_icon {
  color: #fff;
}
.card_skill:hover .flux_icon {
  fill: #fff;
}
.card_skill:hover .threejs_icon {
  fill: #fff;
}
*/


.card_action_row {
  border-top: 1px solid #e6e6e6;
}

.card_action_col {
  padding-top: 8px;
  padding-bottom: 8px;
  font-size: 20px;
}

.card_body {
  padding: 10px
}

.card_hero{
  padding: 12em 0px 0px 0px;
  margin-bottom: 10px;
  background-color: #d2d2d2;
  border-bottom: 1px solid #EEE;
  /*background-image: url(https://placeimg.com/640/480/nature);*/
}

.card_hero_bandgap {
  background-image: url(../assets/img/bandgapPredict.png);
}

.card_hero_hull {
  background-image: url(../assets/img/hullApp.PNG);
}

.card_hero_aflow_online {
  background-image: url(../assets/img/aflowOnline.PNG);
}

.card_hero_map {
  background-image: url(../assets/img/map.png);
}

.card_title{
  font-size: 22px;
  font-family:'Montserrat', sans-serif;
  font-weight: 400;
  color: #1E183A;
  background-color: #fff;
  text-overflow: ellipsis;
  overflow: visible;
  position: relative;
  padding: 24px 18px 24px 18px;
  border-bottom: 1px solid #e6e6e6;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

